--- a/src/features/signup/sign-up-view.module.css
+++ b/src/features/signup/sign-up-view.module.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   width: 100%;
   max-width: 20rem;
-  margin-bottom: 0.75rem;
 }
 
 .formControl:last-of-type {
