--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -12,7 +12,7 @@
   white-space: nowrap;
 }
 
-.globalError {
+.submitError {
   block-size: 2.5rem;
   white-space: normal;
 }
